[package]
name = "vstorage"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
reed-solomon = "0.2.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
rand = "0.10.0"
sha2 = "0.10.9"
thiserror = "2.0.18"
tempfile = "3.25.0"
indicatif = "0.18.4"
